* 2007-07-31 - thorben.betten@open-xchange.com

 - Multiple servlet changed to use JSON objects to create the multiple
   response insterad of using thousands of StringWriter instances

* 2007-07-30 - ben.pahne@open-xchange.com

 - New Feature: Email Autocomplete

* 2007-07-30 - sebastian.kauss@open-xchange.com

 - Fixed Bug #4409 - Exception when opening a contact

* 2007-07-30 - thorben.betten@open-xchange.com

 - Bugfix #8525: Fixed missing personal encoding when sending a read
   acknowledgement
 - Bugfix #7936: Fixed typos in error messages
 - Bugfix #6274: Changed error message according to PM's suggestion

* 2007-07-30 - marcus.klein@open-xchange.com

 - Bugfix #7377. Fixed update of tasks to prevent loss of folder mappings.
 - Bugfix #8351. Server now runs with AggressiveHeap memory option.
 - Bugfix #8106. Startup order of JMX and ConfigDB fixed to get ConfigDB into
   monitoring.

* 2007-07-27 ben.pahne@open-xchange.com

 - Fixed bug #7936, a lot of typos and text corrections

* 2007-07-25 - martin.kauss@open-xchange.com

 - Fixed bug #8482. If an appoinment with an enabled private flag was moved
   to a shared folder, no error message was shown. This has been fixed.

* 2007-07-25 ben.pahne@open-xchange.com

 - Bugfix 7368, changed a message status from error to info
 - Bugfix 7771, changed the SQL query for a linkage list
 - Bugfix 8417, changed the error message of a exception
 - Bugfix 8420, a connection handling problem

* 2007-07-23 - marcus.klein@open-xchange.com

 - Improved SQL command when listing deleted tasks.
 - Removed Suns BASE64 en/decoder.

* 2007-07-23 - martin.kauss@open-xchange.com
 
 - Fixed bug #8490. The wrong folder was send to the client if a shared folder
   was requested but the current user was also a participant in an appointment.
   This has been fixed.

* 2007-07-23 - marcus.klein@open-xchange.com

 - Added config tree setting fastgui.
 - Bugfix #8427: Removing files if storing them fails.
