@@ -2,6 +2,8 @@
 
  - Multiple servlet changed to use JSON objects to create the multiple
    response insterad of using thousands of StringWriter instances
+ - Changed SQL query to retrieve user's root folders to include user's
+   configuration
 
 * 2007-07-30 - ben.pahne@open-xchange.com
 
